# mnemoc

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  data.h  database.cpp  database.h  main.cpp  main.h
